Fix event filter overflow (#4383)

--- a/app/routes/events/components/EventList.css
+++ b/app/routes/events/components/EventList.css
@@ -28,10 +28,12 @@
 
 .filter {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: flex-end;
   margin-bottom: -36px;
   margin-right: -2px;
+  gap: 0.5rem;
 
   @media (--mobile-device) {
     margin-bottom: 0;
